--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,8 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
+    font-size: 16px;
 }
 
 body {
