--- a/src/App.css
+++ b/src/App.css
@@ -20,4 +20,6 @@ body {
     height: 100vh;
     display: flex;
     overflow: hidden;
+    justify-content: center;
+    align-items: flex-start;
 }
