--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,18 +1,20 @@
 .navbar {
     width: 100%;
-    height: 72px;
+    height: 64px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     background-color: #2a2a2a;
+    border-radius: 0 0 8px 8px;
+    border-bottom: 4px solid #1a1a1a;
 }
 
 .navbar__logo-button {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 64px;
-    height: 64px;
+    width: 48px;
+    height: 48px;
     border: none;
     background-color: transparent;
     margin-left: 8px;
@@ -21,4 +23,13 @@
 .navbar__logo {
     width: 80%;
     height: 80%;
+}
+
+.user-login {
+    margin-left: auto;
+    margin-right: 8px;
+    color: white;
+    background-color: #3a3a3a;
+    padding: 8px;
+    border-radius: 4px;
 }
